Добавляет фавиконки и адаптивную графика графику для всех страниц

--- a/source/sass/catalog/more-items.scss
+++ b/source/sass/catalog/more-items.scss
@@ -52,7 +52,7 @@
   bottom: 40px;
 
   @media (min-width: $tablet-width) {
-    background-image: url("../img/catalog/plus-768.svg");
+    background-image: url("../img/catalog/plus-tablet.svg");
     width: 60px;
     height: 60px;
     left: 40px;
