--- a/source/sass/catalog/extra-catalog.scss
+++ b/source/sass/catalog/extra-catalog.scss
@@ -17,15 +17,26 @@
 }
 
 .extra-catalog__wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 75px;
+    margin-bottom: 75px;
+  }
+
   @media (min-width: $desktop-width) {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
+    margin-top: 80px;
+    margin-bottom: 85px;
   }
 }
 
 .extra-catalog__title {
   margin: 0;
-  padding-bottom: 28px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   font-weight: 400;
@@ -75,8 +86,4 @@
   margin: 0;
   padding: 0;
   list-style: none;
-
-  @media (min-width: $tablet-width) {
-    margin-top: 80px;
-  }
 }
