--- a/source/sass/index/slider.scss
+++ b/source/sass/index/slider.scss
@@ -108,10 +108,10 @@
   z-index: 2;
 }
 
-.slider__bar:hover .slider__arrows path {
+.slider__bar:hover .slider__arrows {
   color: #68b738;
 }
 
-.slider__bar:active .slider__arrows path {
+.slider__bar:active .slider__arrows {
   color: #9ecc82;
 }
