Добавляет Pixel Perfect соответствие, главному меню (мобильной версии сайта)

--- a/source/sass/header/toggle-navigation.scss
+++ b/source/sass/header/toggle-navigation.scss
@@ -1,6 +1,8 @@
 .toggle-navigation {
   position: relative;
   padding: 0;
+  bottom: 2px;
+  left: 1px;
   width: 24px;
   background: transparent;
   border: none;
