--- a/source/sass/header/main-header.scss
+++ b/source/sass/header/main-header.scss
@@ -7,7 +7,7 @@
 }
 
 .main-header__wrapper {
-  padding-top: 10px;
+  height: 65px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
