--- a/source/sass/header/main-navigation.scss
+++ b/source/sass/header/main-navigation.scss
@@ -19,9 +19,12 @@
 }
 
 .main-navigation__item {
-  padding-top: 22px;
-  padding-bottom: 22px;
+  height: 66px;
+  width: 320px;
+  display: flex;
   border-top: 1px solid #e6e6e6;
+  align-items: center;
+  justify-content: center;
 
   &:last-child {
     border-bottom: 1px solid #e6e6e6;
@@ -108,7 +111,7 @@
 .main-navigation--opened {
   display: block;
   position: absolute;
-  top: 52.5px;
+  top: 65px;
   right: 0;
   background-color: #ffffff;
 
