--- a/source/sass/header/main-header.scss
+++ b/source/sass/header/main-header.scss
@@ -7,12 +7,13 @@
 }
 
 .main-header__wrapper {
-  height: 65px;
+  width: 320px;
+  min-height: 65px;
+  padding-top: 11px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   position: relative;
-  align-items: center;
 
   @media (min-width: $desktop-width) {
     padding-top: 53px;
