--- a/source/sass/header/toggle-navigation.scss
+++ b/source/sass/header/toggle-navigation.scss
@@ -1,10 +1,9 @@
 .toggle-navigation {
   position: relative;
   padding: 0;
-  bottom: 2px;
-  left: 1px;
+  bottom: 8px;
   width: 24px;
-  background: transparent;
+  background-color: transparent;
   border: none;
   user-select: none;
   cursor: pointer;
