Добавляет Pixel Perfect соответствие мобильной версии сайта

--- a/source/sass/footer/socials.scss
+++ b/source/sass/footer/socials.scss
@@ -10,7 +10,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 20px 0;
+  padding: 0;
+  padding-top: 11px;
+  padding-bottom: 10px;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
 
@@ -25,6 +27,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  top: 2px;
 }
 
 
@@ -40,4 +44,9 @@
     opacity: 0.3;
     transition: 0.25s ease-in-out;
   }
+}
+
+.socials__link--yotube {
+  margin-left: 12px;
+  margin-right: 12px;
 }
