--- a/source/sass/iframe/invite-cooperation.scss
+++ b/source/sass/iframe/invite-cooperation.scss
@@ -22,7 +22,7 @@
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 25px;
+  padding-top: 26px;
   margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
@@ -52,6 +52,7 @@
   text-transform: uppercase;
   color: #111111;
   margin: 0;
+  min-width: 128px;
 
   @media (min-width: $tablet-width) {
     width: 155px;
@@ -63,7 +64,7 @@
 .invite-cooperation__address {
   line-height: 20px;
   margin: 0;
-  margin-left: 25px;
+  margin-left: 13px;
 
   @media (min-width: $tablet-width) {
     width: 160px;
