--- a/source/sass/index/example.scss
+++ b/source/sass/index/example.scss
@@ -1,6 +1,7 @@
 .example {
   background-color: #eaeaea;
-  margin-top: 50px;
+  margin-top: 53px;
+  padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     border-top: 1px solid #e6e6e6;
@@ -39,6 +40,7 @@
   line-height: 40px;
   color: #000000;
   margin: 0;
+  margin-left: 1px;
   margin-bottom: 40px;
 
   @media (min-width: $tablet-width) {
@@ -53,6 +55,8 @@
 
 .example__text {
   max-width: 280px;
+  margin: 0;
+  margin-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     max-width: 708px;
@@ -67,10 +71,8 @@
 
 .example__expenses {
   margin: 0;
-  margin-top: 10px;
-  margin-left: 40px;
-  margin-right: 40px;
-  margin-bottom: 10px;
+  margin-top: 19px;
+  margin-left: 48px;
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
