--- a/source/sass/index/programs.scss
+++ b/source/sass/index/programs.scss
@@ -67,15 +67,16 @@
   font-weight: 400;
   color: #000000;
   text-transform: uppercase;
-  margin: 0;
   padding: 0;
-  margin-bottom: 35px;
-  padding-left: 70px;
+  margin-top: 1px;
+  margin-right: 0;
+  margin-bottom: 29px;
+  margin-left: 71px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 100%;
-    padding-left: 0;
+    margin-left: 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -88,10 +89,10 @@
     content: "";
     background-image: url("../img/index/programs-slimming.svg");
     background-repeat: no-repeat;
-    left: 30px;
-    top: 22px;
-    width: 35px;
-    height: 49px;
+    left: 29px;
+    top: 21px;
+    width: 36px;
+    height: 50px;
 
     @media (min-width: $tablet-width) {
       width: 141px;
@@ -163,8 +164,8 @@
 .programs__link {
   position: relative;
   display: block;
-  padding-top: 15px;
-  padding-bottom: 18px;
+  padding-top: 20px;
+  padding-bottom: 22px;
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -178,7 +179,7 @@
     content: "";
     position: absolute;
     right: 22px;
-    top: 50%;
+    top: calc(50% - 1px);
     width: 24px;
     height: 12px;
     background: url("../img/index/stretch-arrow.svg");
