--- a/source/sass/index/promo.scss
+++ b/source/sass/index/promo.scss
@@ -1,5 +1,5 @@
 .promo {
-  padding-top: 27px;
+  padding-top: 26px;
 
   @media (min-width: $desktop-width) {
     max-height: 660px;
@@ -15,6 +15,7 @@
   text-align: center;
   color: #ffffff;
   margin: 0;
+  margin-left: 2px;
   padding: 0;
 
   @media (min-width: $tablet-width) {
@@ -39,6 +40,7 @@
   margin: 0;
   padding: 0;
   margin-top: 25px;
+  margin-right: 1px;
   margin-bottom: 29px;
 
   @media (min-width: $tablet-width) {
