--- a/source/sass/index/slider.scss
+++ b/source/sass/index/slider.scss
@@ -63,6 +63,7 @@
   height: 100%;
   top: 0;
   left: 50%;
+  margin-left: -2px;
   background-color: #666666;
   border-radius: 2px;
   cursor: col-resize;
