--- a/source/sass/form/optionally.scss
+++ b/source/sass/form/optionally.scss
@@ -124,7 +124,7 @@
 .optionally__checkbox:checked + .optionally__name::before {
   border-color: #cdcdcd;
   background-color: #ffffff;
-  background-image: url("../img/form/tick.svg");
+  background-image: url("../img/form/checkbox-tick.svg");
   background-size: 75%;
 }
 
