--- a/source/sass/header/main-header.scss
+++ b/source/sass/header/main-header.scss
@@ -15,6 +15,11 @@
   justify-content: space-between;
   position: relative;
 
+  @media (min-width: $tablet-width) {
+    padding-top: 0;
+    padding-left: 31px;
+  }
+
   @media (min-width: $desktop-width) {
     padding-top: 53px;
   }
