--- a/source/sass/index/instruction.scss
+++ b/source/sass/index/instruction.scss
@@ -1,5 +1,9 @@
 .instruction {
   margin-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 45px;
+  }
 }
 
 .instruction__wrapper {
@@ -32,6 +36,7 @@
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 100%;
+    margin-bottom: 74px;
   }
 }
 
@@ -44,6 +49,14 @@
     font-size: 16px;
     line-height: 24px;
     margin-right: 0;
+  }
+}
+
+.instruction__text br {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: inline;
   }
 }
 
@@ -73,9 +86,11 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 0;
-    padding-top: 100px;
+    padding-top: 109px;
     width: 250px;
     height: 280px;
+    margin-bottom: 37px;
+    margin-right: -1px;
   }
 }
 
@@ -90,8 +105,8 @@
     line-height: 100%;
     color: #f2f2f2;
     position: relative;
-    bottom: 211px;
-    left: 117px;
+    bottom: 222px;
+    left: 116px;
     z-index: -1;
   }
 }
