--- a/source/sass/index/results-table.scss
+++ b/source/sass/index/results-table.scss
@@ -20,7 +20,7 @@
 
   @media (min-width: $tablet-width) {
     width: 162px;
-    height: 77px;
+    height: 72px;
   }
 }
 
@@ -34,7 +34,7 @@
 
   @media (min-width: $tablet-width) {
     width: 162px;
-    height: 77px;
+    height: 72px;
   }
 }
 
@@ -69,7 +69,7 @@
 
   @media (min-width: $tablet-width) {
     background-color: #ffffff;
-    width: 130px;
+    width: 120px;
     font-size: 14px;
     margin-top: 11px;
     padding: 0;
@@ -77,5 +77,14 @@
 
   @media (min-width: $desktop-width) {
     background-color: #eaeaea;
+  }
+}
+
+.results-table__description--second {
+  @media (min-width: $tablet-width) {
+    width: 143px;
+    margin-left: 8px;
+    padding-left: 7px;
+    padding-right: 7px;
   }
 }
