--- a/source/sass/header/main-header.scss
+++ b/source/sass/header/main-header.scss
@@ -17,11 +17,11 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 0;
-    padding-left: 31px;
   }
 
   @media (min-width: $desktop-width) {
     padding-top: 53px;
+    padding-right: 112px;
   }
 }
 
