--- a/source/sass/index/example.scss
+++ b/source/sass/index/example.scss
@@ -12,7 +12,7 @@
 
   @media (min-width: $desktop-width) {
     border-top: 0;
-    background: linear-gradient(to bottom, #ffffff 165px, #eaeaea 0%);
+    background: linear-gradient(to bottom, #ffffff 159px, #eaeaea 0%);
   }
 }
 
@@ -32,6 +32,8 @@
     padding-left: 110px;
     padding-right: 110px;
     display: flex;
+    padding-top: 24px;
+    margin-bottom: -44px;
   }
 }
 
@@ -53,7 +55,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 150px;
+    margin-bottom: 145px;
   }
 }
 
@@ -69,7 +71,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 436px;
+    max-width: 432px;
+    margin-bottom: 69px;
   }
 }
 
@@ -101,7 +104,7 @@
 
   @media (min-width: $desktop-width) {
     width: 350px;
-    left: 0;
+    left: 1px;
     bottom: 0;
     top: 15px;
     text-align: left;
@@ -110,6 +113,6 @@
 
 .example__amount {
   @media (min-width: $desktop-width) {
-    margin-left: 40px;
+    margin-left: 61px;
   }
 }
