--- a/source/sass/header/main-navigation.scss
+++ b/source/sass/header/main-navigation.scss
@@ -43,7 +43,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 5px;
+    padding-top: 12px;
+    padding-bottom: 10px;
   }
 }
 
@@ -76,12 +77,17 @@
   @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 30px;
+    padding-bottom: 6px;
   }
 }
 
 .main-navigation__link--middle {
   @media (min-width: $tablet-width) {
     margin-left: -4px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 3px;
   }
 }
 
@@ -92,6 +98,7 @@
 }
 
 .main-navigation__link--activ {
+
   &:hover,
   &:active {
     opacity: 1;
