--- a/source/sass/index/slider.scss
+++ b/source/sass/index/slider.scss
@@ -26,6 +26,11 @@
     bottom: 11px;
     left: 19px;
   }
+
+  @media (min-width: $desktop-width) {
+    bottom: 40px;
+    left: 108px;
+  }
 }
 
 .slider__image {
@@ -56,7 +61,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    background: linear-gradient(to bottom, #ffffff 120px, #eaeaea 0%);
+    background: linear-gradient(to bottom, #ffffff 135px, #eaeaea 0%);
   }
 }
 
