Добавляет Pixel Perfect соответствие form.html (mobile)

--- a/source/sass/form/cat-data.scss
+++ b/source/sass/form/cat-data.scss
@@ -12,6 +12,7 @@
   line-height: 18px;
   text-transform: uppercase;
   color: #444444;
+  margin-bottom: 9px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
