--- a/source/sass/form/program-target.scss
+++ b/source/sass/form/program-target.scss
@@ -21,9 +21,10 @@
     font-size: 20px;
     line-height: 30px;
     border: 1px solid #e7e7e7;
-    width: 628px;
-    height: 200px;
+    width: 630px;
     margin-top: 45px;
+    margin-left: 2px;
+    margin-bottom: 75px;
   }
 
   @media (min-width: $desktop-width) {
@@ -36,7 +37,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  height: 116px;
+  min-height: 116px;
   margin-top: 20px;
   margin-bottom: 18px;
   display: flex;
@@ -44,9 +45,9 @@
   justify-content: space-between;
 
   @media (min-width: $tablet-width) {
-    height: 200px;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    min-height: 146px;
+    margin-top: 22px;
+    margin-bottom: 24px;
   }
 }
 
@@ -56,7 +57,7 @@
   cursor: pointer;
 
   @media (min-width: $tablet-width) {
-    margin-left: 28px;
+    margin-left: 27px;
   }
 }
 
