--- a/source/sass/form/cat-data.scss
+++ b/source/sass/form/cat-data.scss
@@ -17,6 +17,8 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
+    margin-left: 2px;
+    margin-bottom: 58px;
   }
 }
 
@@ -69,9 +71,11 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 570px;
+    width: 569px;
     height: 52px;
-    margin-bottom: 22px;
+    margin-bottom: 20px;
+    padding-left: 19px;
+    margin-left: 9px;
   }
 
   @media (min-width: $desktop-width) {
@@ -127,9 +131,10 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 542px;
+    width: 541px;
     height: 52px;
     margin-bottom: 22px;
+    padding-left: 19px;
   }
 
   @media (min-width: $desktop-width) {
@@ -190,8 +195,10 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 500px;
+    width: 499px;
     height: 52px;
+    padding-left: 19px;
+    margin-top: -2px;
   }
 
   @media (min-width: $desktop-width) {
