--- a/source/sass/form/optionally.scss
+++ b/source/sass/form/optionally.scss
@@ -47,7 +47,7 @@
   background-color: #68b738;
   top: 15px;
   width: 100vw;
-  left: 100%;
+  left: calc(100% + 19px);
   margin-left: 20px;
 
   @media (min-width: $tablet-width) {
@@ -60,11 +60,11 @@
     content: "";
     position: absolute;
     display: flex;
-    height: 3px;
+    height: 2px;
     background-color: #68b738;
     top: 22px;
     width: 100vw;
-    right: calc(100% + 2px);
+    right: calc(100% + 17px);
     margin-right: 20px;
   }
 }
@@ -77,7 +77,8 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 250px 250px;
-    gap: 15px 100px;
+    gap: 19px 94px;
+    margin-left: 1px;
   }
 
   @media (min-width: $desktop-width) {
