--- a/source/sass/form/owner-info.scss
+++ b/source/sass/form/owner-info.scss
@@ -54,6 +54,7 @@
   margin-left: 20px;
 
   @media (min-width: $tablet-width) {
+    left: calc(100% + 18px);
     top: 22px;
   }
 }
@@ -63,11 +64,11 @@
     content: "";
     position: absolute;
     display: flex;
-    height: 3px;
+    height: 2px;
     background-color: #68b738;
     top: 22px;
     width: 100vw;
-    right: calc(100% + 2px);
+    right: calc(100% + 17px);
     margin-right: 20px;
   }
 }
@@ -77,7 +78,7 @@
   flex-direction: column;
 
   @media (min-width: $tablet-width) {
-    flex-direction: column;
+    margin-left: 2px;
   }
 
   @media (min-width: $desktop-width) {
@@ -98,7 +99,7 @@
   color: #222222;
 
   @media (min-width: $tablet-width) {
-    left: 93%;
+    left: 94%;
   }
 }
 
@@ -160,9 +161,11 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 548px;
+    width: 546px;
     height: 52px;
     margin-left: 17px;
+    padding-left: 18px;
+    margin-bottom: 20px;
   }
 
   @media (min-width: $desktop-width) {
@@ -172,6 +175,7 @@
 
 .owner-info__telephone {
   position: relative;
+  margin-left: -3px;
 }
 
 .owner-info__telephone-icon {
@@ -181,7 +185,8 @@
   color: #222222;
 
   @media (min-width: $tablet-width) {
-    left: 93%;
+    left: 94%;
+    top: 22%;
   }
 }
 
@@ -244,9 +249,11 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    width: 529px;
+    width: 528px;
     height: 52px;
-    margin-left: 15px;
+    margin-left: 17px;
+    padding-left: 19px;
+    margin-bottom: 20px;
   }
 
   @media (min-width: $desktop-width) {
