--- a/source/sass/header/main-navigation.scss
+++ b/source/sass/header/main-navigation.scss
@@ -8,14 +8,14 @@
 
 
   @media (min-width: $tablet-width) {
-    width: 440px;
+    width: 437px;
     display: flex;
     text-align: left;
     justify-content: space-between;
   }
 
   @media (min-width: $desktop-width) {
-    width: 478px;
+    width: 479px;
   }
 }
 
@@ -23,28 +23,22 @@
   height: 66px;
   width: 320px;
   display: flex;
-  border-top: 1px solid #e6e6e6;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
+  border-top: 1px solid #e6e6e6;
 
   &:last-child {
     border-bottom: 1px solid #e6e6e6;
   }
 
   @media (min-width: $tablet-width) {
-    padding-top: 10px;
-    padding-bottom: 8px;
     border-top: 0;
     width: auto;
 
     &:last-child {
       border-bottom: 0;
     }
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 12px;
-    padding-bottom: 10px;
   }
 }
 
@@ -71,23 +65,15 @@
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
-    padding-bottom: 8px;
+    padding-bottom: 6px;
+    margin-bottom: 2px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 20px;
     line-height: 30px;
     padding-bottom: 6px;
-  }
-}
-
-.main-navigation__link--middle {
-  @media (min-width: $tablet-width) {
-    margin-left: -4px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-left: 3px;
+    margin-bottom: -2px;
   }
 }
 
@@ -98,15 +84,20 @@
 }
 
 .main-navigation__link--activ {
-
-  &:hover,
-  &:active {
-    opacity: 1;
-  }
-
   @media (min-width: $tablet-width) {
     margin-top: 2px;
     border-bottom: 2px solid #68b738;
+  }
+  @media (min-width: $desktop-width) {
+    margin-top: 3px;
+  }
+
+  &:hover {
+    opacity: 1;
+  }
+  
+  &:active {
+    opacity: 1;
   }
 }
 
