--- a/source/sass/form/cat-data.scss
+++ b/source/sass/form/cat-data.scss
@@ -20,6 +20,10 @@
     margin-left: 2px;
     margin-bottom: 58px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
 }
 
 .cat-data__name-input {
