--- a/source/sass/form/owner-info.scss
+++ b/source/sass/form/owner-info.scss
@@ -19,6 +19,10 @@
     line-height: 30px;
     margin-top: 65px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 55px;
+  }
 }
 
 .owner-info__title {
@@ -101,6 +105,10 @@
   @media (min-width: $tablet-width) {
     left: 94%;
   }
+
+  @media (min-width: $desktop-width) {
+    left: 93%;
+  }
 }
 
 .owner-info__email-input {
@@ -175,7 +183,14 @@
 
 .owner-info__telephone {
   position: relative;
-  margin-left: -3px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: -3px;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: -3px;
+  }
 }
 
 .owner-info__telephone-icon {
@@ -187,6 +202,10 @@
   @media (min-width: $tablet-width) {
     left: 94%;
     top: 22%;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: calc(93% + 3px);
   }
 }
 
