--- a/source/sass/catalog/card-item.scss
+++ b/source/sass/catalog/card-item.scss
@@ -1,6 +1,6 @@
 .card-item {
-  padding-bottom: 25px;
-  padding-top: 25px;
+  padding-bottom: 24px;
+  padding-top: 20px;
   border-bottom: 1px solid #ededed;
 
   @media (min-width: $tablet-width) {
@@ -73,10 +73,11 @@
 
 .card-item__table {
   font-size: 12px;
-  line-height: 16px;
-  width: 140px;
-  margin-top: 18px;
-  margin-bottom: 22px;
+  line-height: 14px;
+  width: 144px;
+  margin-top: 13px;
+  margin-bottom: 21px;
+  margin-left: -2px;
 
   @media (min-width: $tablet-width) {
     width: 250px;
@@ -88,6 +89,7 @@
     width: 169px;
   }
 }
+
 
 .card-item__feature {
   padding: 0;
@@ -108,6 +110,7 @@
 
 .card-item__button {
   text-decoration: none;
+  font-size: 16px;
 
   @media (min-width: $tablet-width) {
     margin-top: 20px;
