--- a/source/sass/catalog/extra-card-item.scss
+++ b/source/sass/catalog/extra-card-item.scss
@@ -1,5 +1,7 @@
+
+
 .extra-card-item {
-  padding-bottom: 18px;
+  padding-bottom: 19px;
   border-bottom: 1px solid #e6e6e6;
 
   @media (min-width: $tablet-width) {
@@ -22,6 +24,8 @@
 
 .extra-card-item:first-child {
   border-top: 1px solid #ededed;
+// position: relative;
+// top: 10px;
 }
 
 .extra-card-item__wrapper {
@@ -41,8 +45,7 @@
   text-transform: uppercase;
   color: #222222;
   margin: 0;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 13px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -52,9 +55,11 @@
 }
 
 .extra-card-item__table {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  width: 280px;
+  margin-top: 9px;
+  margin-bottom: 10px;
+  width: 283px;
+  margin-left: -2px;
+
 
   @media (min-width: $tablet-width) {
     font-size: 16px;
@@ -69,6 +74,7 @@
 
 .extra-card-item__button {
   text-decoration: none;
+  font-size: 16px;
 
   @media (min-width: $desktop-width) {
     width: 244px;
