--- a/source/sass/catalog/extra-catalog.scss
+++ b/source/sass/catalog/extra-catalog.scss
@@ -2,6 +2,7 @@
   padding-left: 20px;
   padding-right: 20px;
   margin-top: 25px;
+  margin-bottom: 35px;
 
   @media (min-width: $tablet-width) {
     padding-top: 67px;
@@ -19,7 +20,7 @@
 .extra-catalog__wrapper {
   display: flex;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 33px;
   margin-bottom: 30px;
 
   @media (min-width: $tablet-width) {
@@ -56,12 +57,12 @@
   content: "";
   position: absolute;
   display: flex;
-  height: 3px;
+  height: 2px;
   background-color: #68b738;
   top: 15px;
   width: 100vw;
   left: 100%;
-  margin-left: 20px;
+  margin-left: 21px;
 
   @media (min-width: $tablet-width) {
     top: 22px;
