--- a/source/sass/catalog/more-items.scss
+++ b/source/sass/catalog/more-items.scss
@@ -1,5 +1,5 @@
 .more-items {
-  padding-bottom: 30px;
+  padding-bottom: 24px;
   border-bottom: 1px solid #e6e6e6;
 
   @media (min-width: $tablet-width) {
@@ -17,7 +17,7 @@
 
 .more-items__title {
   margin: 0;
-  margin-top: 80px;
+  margin-top: 78px;
   font-family: "Oswald", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -48,8 +48,8 @@
   position: absolute;
   width: 30px;
   height: 30px;
-  left: 120px;
-  bottom: 40px;
+  left: 125px;
+  bottom: 43px;
 
   @media (min-width: $tablet-width) {
     background-image: url("../img/catalog/plus-tablet.svg");
@@ -83,6 +83,7 @@
 
 .more-items__button {
   text-decoration: none;
+  font-size: 16px;
 
   @media (min-width: $tablet-width) {
     width: 248px;
